Fixes navigation alignment issue, ticket DT-702

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -126,10 +126,7 @@ span h4 {
 
 .widget {
     .extendednavigation {
-        float: none;
         position: relative;
-        display: inline-block;
-        float: right;
         min-height: 50px;
         @media @tablet {
             background-color: transparent;
@@ -141,7 +138,6 @@ span h4 {
             }
         }
         ul {
-            float: right;
             text-align: center;
             padding: 0;
             @media @tablet {
